prova statica popolamento musicCdsContainer

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,3 +17,8 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+//cutom variables
+$headerHeight: 70px;
+$header-font-color: white;
+$backgound-color: #1d2d3b;
